# ml-fastapi-integration

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/ml_model/: iris_model.pkl  iris_model_steps.txt  model.py
app/routers/: prediction.py
app/schemas/: iris_schema.py
app/services/: iris_service.py
